<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Open Days</string>
    <string name="action_settings">Settings</string>
    <string name="no_response">No token received yet.</string>
    <string name="title_activity_authenticator">AuthenticatorActivity</string>
    <string name="login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="open_days">Open Days</string>
    <string name="label">Open Days Account</string>
    <string name="login_error_message">Wrong username or password.</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_guided_groups">GuidedGroups</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="guided_groups_empty_state_label">No groups yet..\nTap to refresh the list!</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer closed</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="lipsum2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam at fermentum nisi. Morbi at tincidunt metus, in rutrum purus. Nam varius porta blandit. Aenean accumsan metus eros, ac malesuada felis sagittis dictum. Praesent viverra ultrices blandit. Fusce aliquet tellus a leo posuere lobortis. Curabitur at auctor ligula. Phasellus vestibulum commodo orci quis fermentum. Sed suscipit non ipsum sit amet laoreet.</string>
    <string name="lipsum1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce egestas convallis sem ornare gravida. Curabitur gravida tincidunt viverra. Sed consequat ante nec orci faucibus, sed lobortis purus tristique. Fusce condimentum augue quis accumsan sagittis.</string>
    <string name="eventInfo">Event information</string>
    <string name="routeInfo">Route information</string>
    <string name="routeTime">Route time</string>
    <string name="route_guide_empty_state_label">No stations found</string>

    <string name="notification_loc_update">Group %1$s you just %2$s station %3$s.</string>
    <string name="BEFORE">before</string>
    <string name="AFTER">after</string>
    <string name="CHECKIN">checked in at</string>
    <string name="CHECKOUT">left</string>
    <string name="SKIP">skipped</string>
    <string name="guided_groups">Guided routes</string>
    <string name="managed_stations">Managed stations</string>
    <string name="logout">Log out</string>
    <string name="managed_stations_empty_state_label">No managed stations yet..\nTap to refresh the list!</string>
    <string name="checking_credentials">Checking credentials</string>
    <string name="login_failed">Oops! Couldn\'t log in. Check internet connection.</string>
    <string name="logging_out">Logging out</string>
    <string name="logging_out_success">You have been successfully logged out!</string>
    <string name="logging_out_error">Logout attempt failed!</string>
    <string name="clearing_data">Clearing user data</string>
    <string name="loading">Loading</string>

    <string name="info">INFO</string>
    <string name="route">ROUTE</string>

    <string name="minute_walk">%1$d-minute walk</string>

    <string name="change_starting_position">Change starting position</string>
    <string name="updating_starting_position">Updating starting position</string>
    <string name="updating_starting_position_error">Failed to update starting position!</string>
    <string name="add_group_size">Add group size</string>
    <string name="group_size">New group size</string>
    <string name="add_location_update">Add location update</string>
    <string name="location_update_CHECKIN">CHECK IN</string>
    <string name="location_update_CHECKOUT">CHECK OUT</string>
    <string name="location_update_SKIP">SKIP</string>
    <string name="half_time_notification">You have half of your time left!</string>
    <string name="end_time_notification">Station limit exceeded! Leave as soon as possible!</string>
    <string name="time_limit">Timit limit</string>
    <string name="no_internet">No internet connection!</string>

    <string name="cancel">CANCEL</string>
    <string name="set">SET</string>
    <string name="load_more">Load more</string>
    <string name="more_than_day"><![CDATA[> 1 day]]></string>

</resources>
