<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="cz.kubaspatny.opendays.ui.activity.AuthenticatorActivity">

    <TextView
        android:id="@+id/openDaysLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="16dp"
        android:text="@string/open_days"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:textColor="@color/abc_primary_text_material_dark"
        android:textSize="48dp" />

    <TextView
        android:id="@+id/loginError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/openDaysLogo"
        android:layout_marginBottom="16dp"
        android:background="@color/red_400"
        android:gravity="center"
        android:padding="16dp"
        android:visibility="invisible"
        android:text="@string/login_error_message" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginError"
        android:drawableLeft="@drawable/ic_account_white_18dp"
        android:drawablePadding="8dp"
        android:hint="@string/username_hint" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:drawableLeft="@drawable/ic_key_white_18dp"
        android:drawablePadding="8dp"
        android:hint="@string/password_hint"
        android:password="true" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:text="@string/login" />

</RelativeLayout>
